src/test/deca/syntax/valid/created/parser/if.deca
// Ligne erreur:
//    14
//
// Description:
//    tests de programme lexicalement correct.
//
// Resultats:
//    Ligne 14 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 01/01/2024

{
    int i = -1;
    if (i==-1) {
        a=0;
    }
    println("a vaut", a);
}