src/test/deca/syntax/invalid/provided/chaine_incomplete.deca
// Ligne erreur:
//    16
//
// Description:
//    tests de programme incorrect lexicalement (chaine non terminee)
//
// Resultats:
//    ligne 16 : Erreur, chaine non terminee (sur fin de fichier)
//
// Auteur:
//    gl44
//
// Historique:
//    cree le 01/01/2024

"chaine pas finie
